--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,15 +25,13 @@
     </string-array>
 
     <string-array name="color_arrays">
-        <item>Blue</item>
-        <item>Green</item>
         <item>Red</item>
-        <item>Black</item>
-        <item>Purple</item>
+        <item>Orange</item>
         <item>Yellow</item>
-        <item>Dark-Green</item>
-        <item>Light-Green</item>
-        <item>Green-Green</item>
+        <item>Green</item>
+        <item>Blue</item>
+        <item>Indigo</item>
+        <item>Violet</item>
     </string-array>
 
 </resources>
