--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,13 +8,13 @@
     <string name="action_settings">Settings</string>
     
     <string-array name="category_arrays">
-        <item>Example 1</item>
-        <item>Example 2</item>
-        <item>Example 3</item>
-        <item>Example 4</item>
-        <item>Example 5</item>
-        <item>Example 6</item>
-        <item>Example 7</item>
+        <item>None</item>
+        <item>Science</item>
+        <item>Socials</item>
+        <item>Music</item>
+        <item>Language Arts</item>
+        <item>Study</item>
+        <item>Misc.</item>
     </string-array>
 
     <string-array name="priority_arrays">
